--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
     tags:
-      - 'v*'
+      - '[0-9]+.[0-9]+.[0-9]+*'
   pull_request:
 
 jobs:
@@ -163,6 +163,20 @@ jobs:
         with:
           submodules: recursive
           ssh-key: ${{ secrets.SSH_KEY }}
+          ssh-strict: false
+
+      - uses: webfactory/ssh-agent@v0.5.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+
+      - name: Run ssh-keyscan
+        run: ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      - name: Setup SSH for Windows Git LFS
+        run: |
+          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
+          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "echo '${{ secrets.SSH_KEY }}' >> ~/.ssh/id_rsa"
+        if: matrix.os == 'windows-2019'
 
       - name: Install ${{ runner.os }} Dependencies.
         shell: bash
@@ -202,7 +216,10 @@ jobs:
         shell: bash
         run: |
           cargo make prod-installer
-
+      - name: Pull Git LFS objects
+        run: git lfs pull
+        env:
+          GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
       - name: Zip ${{ runner.os }} Binaries.
         env:
           OS_NAME: ${{ runner.os }}
@@ -264,3 +281,45 @@ jobs:
           else
               python benches/frontend_bench.py --binary=swift_navigation_console
           fi
+
+  release:
+    name: Create Release
+    needs:
+      - frontend_bench
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Pull Windows Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: Windows-artifacts
+          path: |
+            windows
+      - name: Pull Linux Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: Linux-artifacts
+          path: |
+            linux
+      - name: Pull macOS Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: macOS-artifacts
+          path: |
+            macos
+      - name: Store Env Vars
+        shell: bash
+        run: |
+          echo "WINDOWS_ARCHIVE=$(cat windows/release-archive.filename)" >>$GITHUB_ENV
+          echo "LINUX_ARCHIVE=$(cat linux/release-archive.filename)" >>$GITHUB_ENV
+          echo "MACOS_ARCHIVE=$(cat macos/release-archive.filename)" >>$GITHUB_ENV
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            windows/${{ env.WINDOWS_ARCHIVE }}
+            linux/${{ env.LINUX_ARCHIVE }}
+            macos/${{ env.MACOS_ARCHIVE }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
