--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,14 +80,10 @@ jobs:
         run: |
           conda run -n console_pp poetry install
 
-      - name: Run Benchmarks
+      - name: Run Backend Benchmarks
         shell: bash
         run: |
-          cargo make benches
-      - name: Run Benchmarks - Memory
-        shell: bash
-        run: |
-          cd console_backend && cargo test test_run_process_messages --features benches -- --ignored --nocapture
+          cargo make backend-benches
 
   checks:
 
@@ -281,9 +277,9 @@ jobs:
         run: |
           cd output/${{ runner.os }}
           if [ "$RUNNER_OS" == "Windows" ]; then
-              python benches/frontend_bench.py --binary=swift_navigation_console.exe
+              python bench_runner.py --frontend_cpu --executable=swift_navigation_console.exe
           else
-              python benches/frontend_bench.py --binary=swift_navigation_console
+              python bench_runner.py --frontend_cpu --executable=swift_navigation_console
           fi
 
   release:
