--- a/Makefile.toml
+++ b/Makefile.toml
@@ -5,6 +5,13 @@ CONDA_ENV = "console_pp"
 [config]
 default_to_workspace = false
 
+[tasks.poetry-install]
+script_runner = "@shell"
+script = '''
+conda run -n $CONDA_ENV poetry shell
+conda run -n $CONDA_ENV poetry install -vvv
+'''
+
 [tasks.generate-resources]
 script_runner = "@shell"
 script = '''
@@ -200,7 +207,8 @@ args    = ["bench", "--all-features", "--", "--verbose", "--noplot"]
 [tasks.backend-cpu-bench-validate]
 script_runner = "@shell"
 script = '''
-conda run -n $CONDA_ENV python utils/bench_runner.py --backend_cpu
+
+conda run -n $CONDA_ENV python -m pip list && conda run -n $CONDA_ENV python utils/bench_runner.py --backend_cpu
 '''
 
 [tasks.backend-mem-bench]
