--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ setuptools-rust = "^0.11.6"
 pkgconfig = "^1.5.1"
 Cython = "^0.29.21"
 nuitka = "^0.6.11"
+psutil = "5.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
