Respond to review requests.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -99,7 +99,7 @@ conda run -n $CONDA_ENV fbs freeze
 [tasks.copy-console-backend-to-fbs.windows]
 script_runner = "@shell"
 script = '''
-mkdir .\target\swift_navigation_console\console_backend\ | mv .\console_backend\console_backend\server.cp38-win_amd64.pyd .\target\swift_navigation_console\console_backend\ | true
+mkdir .\target\swift_navigation_console\console_backend\ || mv .\console_backend\console_backend\server.cp38-win_amd64.pyd .\target\swift_navigation_console\console_backend\ || true
 '''
 
 [tasks.copy-console-backend-to-fbs]
